--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,16 @@
+:root {
+  --lightgreen: #F1FFE6;
+  --green: #B8E0AF;
+  --darkgreen: #9BAF94;
+  --yellow: #E5E6B2;
+  --purple: #C9BFDC;
+  --gray: #EEEEEE;
+  --turquoise: #63A990;
+  --blue: #7CA7B5;
+  --browntext: #787939;
+  --purpletext: #7D6C9E;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
