--- a/src/index.css
+++ b/src/index.css
@@ -2,13 +2,45 @@
   --lightgreen: #F1FFE6;
   --green: #B8E0AF;
   --darkgreen: #9BAF94;
+  --lightyellow: #FBF8DD;
   --yellow: #E5E6B2;
+  --lightpurple: #F1E7F4;
   --purple: #C9BFDC;
   --gray: #EEEEEE;
   --turquoise: #63A990;
+  --lightblue: #9AC8CE;
   --blue: #7CA7B5;
   --browntext: #787939;
   --purpletext: #7D6C9E;
+}
+
+input, textarea, .input {
+  border: none;
+  border-radius: 5px;
+  padding: 10px;
+  min-height: 20px;
+  box-shadow: inset 1px 1px 4px rgba(0, 0, 0, 0.25);
+  font-family: sans-serif;
+}
+
+input {
+  padding: 5px 10px;
+}
+
+.textarea {
+  white-space: pre-wrap;
+}
+
+.close-button {
+  position: absolute;
+  width: 25px;
+}
+
+.edit-button {
+  position: absolute;
+  top: 8px;
+  width: 25px;
+  right: 10px;
 }
 
 body {
