--- a/src/index.css
+++ b/src/index.css
@@ -7,8 +7,10 @@
   --lightpurple: #F1E7F4;
   --purple: #C9BFDC;
   --gray: #EEEEEE;
+  --lightgray: #EFF1EE;
   --turquoise: #63A990;
   --lightblue: #9AC8CE;
+  --paleblue: #D3DBEF;
   --blue: #7CA7B5;
   --browntext: #787939;
   --purpletext: #7D6C9E;
