--- a/src/Components/Main/ScrollList.css
+++ b/src/Components/Main/ScrollList.css
@@ -25,8 +25,10 @@
 }
 
 .scrolllist-item img {
-    position: absolute;
-    top: 50%;
-    right: 10px;
-    transform: translateY(-50%);
+    vertical-align: middle;
+    position: relative;
+    float: right;
+    height: 20px;
+    padding-right: 5px;
+    /* transform: translateY(-50%); */
 }
