--- a/src/Components/Memory/Memory.css
+++ b/src/Components/Memory/Memory.css
@@ -15,7 +15,7 @@
     margin-bottom: 20px;
 }
 
-.scrolllist-container {
+.memory .scrolllist-container {
     text-align: center;
     box-shadow: inset 0px 2px 2px rgba(0, 0, 0, 0.25);
     position: relative;
@@ -25,7 +25,7 @@
     height: calc(100vh - 140px);
 }
 
-.arrow {
+.memory .arrow {
     height: 20px;
 }
 
