--- a/src/Components/Main/Main.css
+++ b/src/Components/Main/Main.css
@@ -13,6 +13,7 @@
     border-radius: 20px 20px 0 0;
     padding: 30px 10px 10px;
     overflow-y: scroll;
+    box-shadow: inset -2px 0px 4px rgba(0, 0, 0, 0.15), inset 2px 2px 2px rgba(0, 0, 0, 0.15);
 }
 
 ::-webkit-scrollbar {
