--- a/src/Components/Main/ScrollList.css
+++ b/src/Components/Main/ScrollList.css
@@ -5,6 +5,7 @@
     padding: 20px;
     background-color: var(--purple);
     border-radius: 10px;
+    box-shadow: inset 0px 1px 4px rgba(0, 0, 0, 0.25);
 }
 
 .main .scrolllist-item {
@@ -29,6 +30,10 @@
     position: relative;
     float: right;
     height: 20px;
-    padding-right: 5px;
+    padding: 0 5px;
     /* transform: translateY(-50%); */
+}
+
+.main .scrolllist-name {
+    font-weight: bold;
 }
