--- a/src/Components/Main/SearchBar.css
+++ b/src/Components/Main/SearchBar.css
@@ -12,6 +12,7 @@
     padding: 15px;
     text-decoration: none;
     z-index: 10;
+    box-shadow: inset 0px 1px 4px rgba(0, 0, 0, 0.25);
 }
 
 .searchbar-placeholder {
