--- a/src/Components/Main/ShortList.css
+++ b/src/Components/Main/ShortList.css
@@ -12,6 +12,7 @@
     border-radius: 10px;
     margin-top: 10px;
     padding: 10px;
+    box-shadow: 1px 2px 4px rgba(0, 0, 0, 0.25);
 }
 
 .shortlist-item img {
@@ -26,4 +27,8 @@
     vertical-align: top;
     /* top: 50%; */
     /* transform: translateY(-50%); */
+}
+
+.shortlist-name {
+    font-weight: bold;
 }
