--- a/src/Components/Main/NavBar.css
+++ b/src/Components/Main/NavBar.css
@@ -3,17 +3,18 @@
     bottom: 0;
     width: 100%;
     height: 70px;
+    z-index: 10;
 }
 
 .navbar-item {
     display: inline-block;
     width: calc(100% / 3);
-    height: 100%;
+    height: calc(100% - 15px);
     text-align: center;
     /* vertical-align: middle; */
     /* justify-content: center; */
     /* align-items: center; */
-    padding: 15px 0 5px;
+    padding: 10px 0 5px;
 }
 
 .navbar-item img {
