raw data linking to main page and their page page

--- a/src/Components/Ourpage/Ourpage.css
+++ b/src/Components/Ourpage/Ourpage.css
@@ -4,6 +4,7 @@
     background-color: var(--lightyellow);
     color: var(--browntext);
     overflow: scroll;
+    padding-bottom: 40px;
 }
 
 .ourpage img {
@@ -99,5 +100,5 @@
 
 .hashtag-item div {
     display: inline-block;
-    margin-left: 10px;
+    margin: 0 10px;
 }
