--- a/src/Components/Main/ScrollList.css
+++ b/src/Components/Main/ScrollList.css
@@ -3,6 +3,7 @@
 
 .main .scrolllist-container {
     display: inline-block;
+    margin-top: 10px;
     width: calc(100% - 40px);
     color: var(--purpletext);
     padding: 20px;
@@ -30,7 +31,7 @@
 
 .main .scrolllist-text {
     font-family: 'Jeju Gothic', sans-serif;
-    font-size:22px;
+    font-size:18px;
     padding:7px;
 }
 
@@ -38,12 +39,12 @@
     vertical-align: middle;
     position: relative;
     float: right;
-    height: 20px;
+    height: 25px;
     padding: 0 5px;
     /* transform: translateY(-50%); */
 }
 
 .main .scrolllist-name {
-    font-size:50px;
+    font-size:25px;
     font-family: 'Cantora One', sans-serif;
 }
