--- a/src/Components/Main/ShortList.css
+++ b/src/Components/Main/ShortList.css
@@ -7,20 +7,15 @@
     width: calc(50% - 20px);
     color: var(--browntext);
     padding: 10px;
+    padding-bottom: 5px;
+    vertical-align: top;
+    height: 385px;
+    overflow-y: scroll;
 }
 .shortlist-container-small {
     display: inline-block;
-    width: calc(50% - 20px);
+    width: 50%;
     color: var(--browntext);
-    padding: 10px;
-}
-
-.shortlist-container-small-second {
-    display: inline-block;
-    width: calc(50% - 20px);
-    color: var(--browntext);
-    padding: -10px;
-    margin-left: -10px;
 }
 
 .shortlist-item {
@@ -36,28 +31,38 @@
 
 .shortlist-item-profile {
     position: relative;
-    width: calc(100% - 50px);
-    height : 210px;
+    width: calc(100% - 30px);
+    /* height : 210px; */
     background-color: var(--yellow);
     border-radius: 10px;
-    margin-top: 10px;
+    margin: 10px;
     padding: 10px;
     box-shadow: 1px 2px 4px rgba(0, 0, 0, 0.25);
 }
 
 .shortlist-item img {
-    width: 25%;
+    /* width: 25%; */
     padding-right: 10px;
+}
+
+.main .shortlist-item .img {
+    position: relative;
+    float: right;
+    height: 25px;
+    padding: 0 5px;
+    margin-top: -13px;
+    /* transform: translateY(-50%); */
 }
 
 .shortlist-text {
     display: inline-block;
     position: relative;
-    width: calc(75% - 10px);
+    width: calc(100% - 10px);
     vertical-align: top;
     font-family: 'Jeju Gothic', sans-serif;
-    margin-left:80px;
-    margin-top: -3px;
+    /* margin-left:80px; */
+    margin-top: 3px;
+    /* float: right; */
     /* top: 50%; */
     /* transform: translateY(-50%); */
 }
@@ -65,12 +70,16 @@
 .shortlist-text-groupname {
     display: inline-block;
     position: relative;
-    width: calc(75% - 10px);
+    width: calc(100% - 20px);
     vertical-align: top;
     font-family: 'Jeju Gothic', sans-serif;
-    font-size:20px;
+    font-size:18px;
     z-index:2;
-    margin-top:-30px;
+    padding: 10px;
+    border-radius: 10px;
+    margin-top: 5px;
+    background-color: var(--lightyellow);
+    text-align: center;
     /* top: 50%; */
     /* transform: translateY(-50%); */
 }
@@ -78,12 +87,11 @@
 .shortlist-text-grouphash {
     display: inline-block;
     position: relative;
-    width: calc(75% - 10px);
+    width: calc(100% - 20px);
     vertical-align: top;
     font-family: 'Jeju Gothic', sans-serif;
     z-index:2;
-    margin-left:10px;
-    margin-top:-25px;
+    margin:10px;
     /* top: 50%; */
     /* transform: translateY(-50%); */
 }
@@ -91,16 +99,18 @@
 .shortlist-text-big {
     display: inline-block;
     position: relative;
-    width: calc(75% - 10px);
+    width: calc(100%);
     vertical-align: top;
     font-family: 'Jeju Gothic', sans-serif;
-    font-size:30px;
+    font-size:18px;
     margin-left: -10px;
-    margin-top: 12px;
+    margin-top: 8px;
+    /* border: solid 1px black; */
 }
 .shortlist-name {
-    font-size:50px;
+    font-size: 25px;
     font-family: 'Cantora One', sans-serif;
+    color: var(--browntext);
 }
 
 .shortlist-groupname {
