--- a/src/index.css
+++ b/src/index.css
@@ -45,6 +45,10 @@ input {
   right: 10px;
 }
 
+.clickable {
+  cursor: pointer;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
