--- a/src/Components/Ourpage/Ourpage.css
+++ b/src/Components/Ourpage/Ourpage.css
@@ -28,17 +28,18 @@
     background-color: var(--lightyellow);
     font-weight: bold;
     color: var(--browntext);
-    height:42px;
+    /* height:42px; */
     font-family: 'Jeju Gothic', sans-serif;
-    font-size:40px;
+    font-size:25px;
     border-radius: 50px;
     padding: 12px;
     text-align: center;
     position: absolute;
-    top: 28vw;
+    top: 32vw;
     left: 50%;
     width: 80%;
     transform: translateX(-50%);
+    z-index: 3;
     box-shadow: inset 0px 1px 4px rgba(0, 0, 0, 0.25);
 }
 
@@ -49,9 +50,9 @@
 .info-container {
     position: relative;
     border-radius: 10px 10px 0 0;
-    margin-top: -15px;
+    margin-top: -20px;
     padding: 10px;
-    padding-top: 40px;
+    padding-top: 60px;
     background-color: var(--yellow);
     color: var(--browntext);
     box-shadow: inset -2px 0px 2px rgba(0, 0, 0, 0.25), inset 2px 2px 2px rgba(0, 0, 0, 0.25);
@@ -69,14 +70,14 @@
 
 .group-introduction-text {
     font-family: 'Jeju Gothic', sans-serif;
-    font-size:20px;
+    font-size:18px;
 }
 
 .group-introduction .header {
 
     margin-bottom: 10px;
     font-weight: bold;
-    font-size:50px;
+    font-size:25px;
     margin-top:-40px;
     font-family: 'Cantora One', sans-serif;
 }
@@ -85,16 +86,17 @@
     float: right;
     background-color: var(--lightyellow);
     border-radius: 10px;
-    margin-top: -5px;
+    margin-top: -40px;
     padding: 5px 10px;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 .introduce-us {
-    color: var(--browntext);
-    font-size:50px;
-    font-family: 'Cantora One', sans-serif;
+    margin-bottom: 10px;
+    font-weight: bold;
+    font-size:25px;
     margin-top:-40px;
+    font-family: 'Cantora One', sans-serif;
 }
 
 .hashtag-item {
