--- a/src/styles/chatDesign.css
+++ b/src/styles/chatDesign.css
@@ -13,6 +13,19 @@ body {
   justify-content: center;
     flex-direction: column;
 } */
+
+@import url(//fonts.googleapis.com/earlyaccess/jejugothic.css);
+@import url('https://fonts.googleapis.com/css2?family=Cantora+One&display=swap');
+
+.background{
+    display:"flex";
+    flex-direction:"column";
+    justify-content:"flex-end";
+    background:#EAF6F4;
+    height:"80vh";
+    z-index:-1
+}
+
 ::-webkit-scrollbar {
   width: 4px;
 }
@@ -145,4 +158,77 @@ body {
 }
 .msg-self .timestamp {
     text-align: right;
+}
+
+.speed-dial-menu {
+    background-color:#C4DCDF;
+    outline-color:white;
+    outline-width:4px;
+    outline-style:solid;
+}
+
+.chat-box {
+    display: flex;
+    height: 45px;
+    background-color:#ffffff;
+    font-family: 'Jeju Gothic', sans-serif;
+    font-size:18px;
+    margin-top:35px;
+    color: var(--browntext);
+}
+
+.bottom-bar-container {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    height: 80px;
+    background-color:#EBEDD0;
+}
+
+.font-eng {
+    font-size:25px;
+    font-family: 'Cantora One', sans-serif;
+}
+
+.top-bar-container {
+    position: fixed;
+    top: 0px;
+    width: 100vw;
+    left:0px;
+    height: 60px;
+    background-color:#C4DCDF;
+}
+
+.rearrange-speeddial{
+    position: fixed;
+    top: 8px;
+    left:90vw;
+}
+
+.chat-group-name{
+    font-size:30px;
+    font-family: 'Cantora One', sans-serif;
+    margin-top: 10px;
+    margin-left: 10px;
+    color: #508087;
+}
+
+.vote-name {
+    font-size:20px;
+    font-family: 'Cantora One', sans-serif;
+    margin-left: 42%;
+    margin-top: -5px;
+    margin-bottom: 5px;
+    color: #979A64;
+}
+
+.share-name {
+    font-size:15px;
+    font-weight: bold;
+    width: 150px;
+    font-family: 'Cantora One', sans-serif;
+    margin-left: 0%;
+    margin-top: 2px;
+    margin-bottom: 5px;
+    color: #979A64;
 }
