--- a/src/styles/chatDesign.css
+++ b/src/styles/chatDesign.css
@@ -216,7 +216,7 @@ body {
 .vote-name {
     font-size:20px;
     font-family: 'Cantora One', sans-serif;
-    margin-left: 42%;
+    align-items: center;
     margin-top: -5px;
     margin-bottom: 5px;
     color: #979A64;
