--- a/src/Pages/Home.css
+++ b/src/Pages/Home.css
@@ -1,7 +1,7 @@
 @import url(//fonts.googleapis.com/earlyaccess/jejugothic.css);
 @import url('https://fonts.googleapis.com/css2?family=Cantora+One&display=swap');
 
-.background{
+.home_background{
     display:"flex";
     flex-direction:"column";
     justify-content:"flex-end";
