--- a/src/Components/Main/Main.css
+++ b/src/Components/Main/Main.css
@@ -1,5 +1,9 @@
 .main {
+    position: absolute;
     width: 100%;
+    height:100%;
+    background-color: #DFD89C;
+    z-index: -1;
 }
 
 .content-container {
@@ -9,7 +13,7 @@
     left: 50%;
     bottom: 70px;
     transform: translateX(-50%);
-    background-color: var(--green);
+    background-color: #A8C19D;
     border-radius: 20px 20px 0 0;
     padding: 30px 10px 10px;
     overflow-y: scroll;
