--- a/src/Components/Main/SearchBar.css
+++ b/src/Components/Main/SearchBar.css
@@ -6,8 +6,8 @@
     width: 80%;
     /* height: 50px; */
     transform: translateX(-50%);
-    color: #BEDAA9;
-    background-color: var(--lightgreen);
+    color: #A8C19D;
+    background-color: #D4E2CE;
     border-radius: 10px;
     padding: 15px;
     text-decoration: none;
