--- a/src/Pages/Home.css
+++ b/src/Pages/Home.css
@@ -5,7 +5,7 @@
     display:"flex";
     flex-direction:"column";
     justify-content:"flex-end";
-    background:#F8D07E;
+    background:#F0DB92;
     height:120vh;
     z-index:-2
 }
