--- a/src/component/Main/NavBar.css
+++ b/src/component/Main/NavBar.css
@@ -14,6 +14,7 @@
     /* justify-content: center; */
     /* align-items: center; */
     padding: 10px 0 5px;
+    background-Color:#4D7075;
 }
 
 .navbar-item img {
