--- a/src/component/VoteResult.css
+++ b/src/component/VoteResult.css
@@ -68,7 +68,11 @@
     width: calc(var(--width)*100%);
     height: 50px;
     background-color: #77785F;
-    margin-left:10px;
+    margin-left:30px;
+    border-radius: 0% 12px 12px 0%;
+    border-left-style: outset;
+    border-color: #A58B65;
+    border-width: 7px;
 }
 
 .number-container{
@@ -80,5 +84,30 @@
     font-family: 'Jeju Gothic', sans-serif;
     font-size:20px;
     color:#77785F;
-    margin-left:100%;
+    margin-left:110%;
+    margin-top:10%;
+}
+
+.wish{
+    font-family: 'Jeju Gothic', sans-serif;
+    font-size:15px;
+    color:#77785F;
+    margin-top:20px;
+    margin-bottom:-10px;
+    margin-left:30px;
+
+}
+
+.comment-text{
+    font-family: 'Jeju Gothic', sans-serif;
+    font-size:15px;
+    color:#d7d8b2;
+    font-weight: bold;
+}
+
+.comment-text-contents{
+    font-family: 'Jeju Gothic', sans-serif;
+    font-size:15px;
+    color:#50502b;
+    margin-left:5px;
 }
