--- a/src/component/VoteBox.css
+++ b/src/component/VoteBox.css
@@ -53,15 +53,16 @@
 }
 
 .set_vote_ing_title{
-    /* position:absolute; */
+    position:relative;
     display: inline-block;
-    width:60%;
     font-family: 'Jeju Gothic', sans-serif;
     font-size:25px;
     text-align: center;
     color: #68694A;
     margin-top: 50px;
-    margin-left: 20%;
+    left: 50%;
+    width: 70%;
+    transform: translateX(-50%);
     z-index: 5;
     background-color:#DBD9C3 ;
 }
