--- a/src/component/VoteResult.css
+++ b/src/component/VoteResult.css
@@ -2,11 +2,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Cantora+One&display=swap');
 
 .vote_result_background{
-    display:"flex";
-    flex-direction:"column";
-    justify-content:"flex-end";
+    display:flex;
+    flex-direction:column;
+    justify-content:flex-end;
     background-color:#90A886;
-    height:120vh;
+    height:100vh;
 }
 
 .paper-box{
@@ -38,12 +38,16 @@
 }
 
 .vote-result-title{
+    position:relative;
+    display: inline-block;
     font-family: 'Jeju Gothic', sans-serif;
     font-size:25px;
     text-align: center;
     color: #68694A;
-    margin-top:-2%;
-    margin-left:-1%;
+    margin-top: 50px;
+    width: 70%;
+    left: 50%;
+    transform: translateX(-50%);
 }
 
 .button_location{
@@ -55,9 +59,9 @@
     margin-top:5px;
     display: inline-block;
     background-color:#aeab8b;
-    width: 80%;
+    width: calc(70% - 20px);
     padding: 10px;
-    margin-left:7%;
+    margin-left:15%;
     border-radius: 10px;
 }
 
@@ -66,9 +70,9 @@
     z-index:9;
     display: inline-block;
     width: calc(var(--width)*100%);
-    height: 50px;
+    height: 30px;
     background-color: #77785F;
-    margin-left:30px;
+    margin-left:15%;
     border-radius: 0% 12px 12px 0%;
     border-left-style: outset;
     border-color: #A58B65;
@@ -81,11 +85,12 @@
 }
 
 .total-point{
+    display: inline-block;
     font-family: 'Jeju Gothic', sans-serif;
-    font-size:20px;
+    font-size:15px;
     color:#77785F;
     margin-left:110%;
-    margin-top:10%;
+    margin-top:7px;
 }
 
 .wish{
@@ -94,7 +99,7 @@
     color:#77785F;
     margin-top:20px;
     margin-bottom:-10px;
-    margin-left:30px;
+    margin-left:15%;
 
 }
 
