--- a/src/styles/chatDesign.css
+++ b/src/styles/chatDesign.css
@@ -228,11 +228,12 @@ body {
 .share-name {
     font-size:15px;
     font-weight: bold;
-    width: 150px;
+    width: 180px;
     font-family: 'Cantora One', sans-serif;
-    margin-left: 0%;
-    margin-top: 2px;
-    margin-bottom: 5px;
+    /* margin-top: 2px;
+    margin-bottom: 5px; */
+    margin: 5px 0;
+    padding: 10px;
     color: #979A64;
 }
 
