--- a/src/Components/Main/ScrollList.css
+++ b/src/Components/Main/ScrollList.css
@@ -3,7 +3,7 @@
 
 .main .scrolllist-container {
     display: inline-block;
-    margin-top: 10px;
+    margin-top: 0px;
     width: calc(100% - 40px);
     color: #4F6148;
     padding: 20px;
@@ -18,7 +18,8 @@
     background-color: var(--gray);
     border-radius: 10px;
     margin-top: 10px;
-    padding: 10px;
+    padding: 7px;
+    box-shadow: 1px 2px 4px rgba(0, 0, 0, 0.25);
 }
 
 .main .scrolllist-arrow {
@@ -32,7 +33,7 @@
 .main .scrolllist-text {
     font-family: 'Jeju Gothic', sans-serif;
     font-size:18px;
-    padding:7px;
+    padding:10px;
 }
 
 .main .scrolllist-item img {
