--- a/src/Pages/Home.css
+++ b/src/Pages/Home.css
@@ -2,32 +2,36 @@
 @import url('https://fonts.googleapis.com/css2?family=Cantora+One&display=swap');
 
 .home_background{
-    display:flex;
+    /* display:flex;
     flex-direction:column;
-    justify-content:flex-end;
+    justify-content:flex-end; */
     background:#F0DB92;
+    width: 100vw;
     height:100vh;
-    z-index:-2
+    z-index:0;
+    overflow: hidden;
 }
 
 .backcircle{
-    width:500px;
-    height:500px;
+    position: absolute;
+    width:40%;
+    padding-bottom:40%;
     background-color: #29394B;
     border-radius:50%;
     position:absolute;
     z-index:1;
     left: 50%;
-    top: 55%;
-    transform: translate(-50%, -65%);
+    top: 50%;
+    transform: translate(-50%, -40%);
 }
 
 .animation_position{
+    overflow: hidden;
     position:absolute;
-    z-index: 1;
+    z-index: 6;
     left: 50%;
-    top: 40%;
-    width: 80%;
+    width: 100%;
+    height: 100%;
     transform: translateX(-50%);
 }
 
