--- a/src/Pages/Home.css
+++ b/src/Pages/Home.css
@@ -2,6 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Cantora+One&display=swap');
 
 .home_background{
+    position: relative;
     /* display:flex;
     flex-direction:column;
     justify-content:flex-end; */
@@ -14,8 +15,8 @@
 
 .backcircle{
     position: absolute;
-    width:40%;
-    padding-bottom:40%;
+    width:50%;
+    padding-bottom:50%;
     background-color: #29394B;
     border-radius:50%;
     position:absolute;
@@ -30,9 +31,9 @@
     position:absolute;
     z-index: 6;
     left: 50%;
-    width: 100%;
-    height: 100%;
-    transform: translateX(-50%);
+    width: 120%;
+    height: 120%;
+    transform: translate(-50%, -7%);
 }
 
 .signinbuttonup{
