--- a/src/Components/Ourpage/Ourpage.css
+++ b/src/Components/Ourpage/Ourpage.css
@@ -23,13 +23,12 @@
 
 .group-name {
     background-color: #DFD89C;
-    font-weight: bold;
+    font-weight: bold;    
     color: #93793a;
-    /* height:42px; */
-    font-family: 'Jeju Gothic', sans-serif;
-    font-size:20px;
+    font-family: 'Cantora One', sans-serif;
+    font-size:32px;
     border-radius: 50px;
-    padding: 12px;
+    padding: 8px;
     text-align: center;
     position: absolute;
     top: 29vw;
@@ -46,6 +45,7 @@
 
 .info-container {
     position: relative;
+    font-family: 'Jeju Gothic', sans-serif;
     border-radius: 10px 10px 0 0;
     margin-top: -20px;
     padding: 10px;
@@ -63,6 +63,7 @@
 
 .group-introduction {
     padding: 10px;
+    font-family: 'Jeju Gothic', sans-serif;
 }
 
 .group-introduction-text {
